<resources>
    <string name="app_name">Public_Transportation_Driver_Applicaiton</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_text">Public Transportation Tracking and Information System</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="route_number_text">Route Number</string>
    <string name="current_bus_stop_text">Current Bus Stop</string>
    <string name="next_stop_text">Next Stop</string>
    <string name="start_operation_stop_operation_text">Start Operation / Stop Operation</string>
    <string name="journey_start_journey_back_text">Journey Start / Journey Back</string>
    <string name="log_out_text">Log Out</string>
    <string name="exit_text">Exit</string>
    <string name="please_enter_username_text">Please Enter Username</string>
    <string name="please_enter_password_text">Please Enter Password</string>
</resources>